# draco-model

./: .gitattributes  .gitignore  CLAUDE.md  README.md  mkdocs.yml  plan.md  plan_claude.md  plan_rethink.md  plan_rethink2.md  plan_rethink3.md  pyproject.toml
docs/: index.md
docs/api/: engine.md  index.md  model.md  recipes.md
docs/api/layers/: aggregate.md  combine.md  filters.md  level2.md  metrics.md  operators.md  source.md  transforms.md
docs/user-guide/: aggregation.md  data-sources.md  debugging.md  payload.md  quickstart.md  rolling.md
draco_model/: __init__.py  core.py  recipes.py
draco_model/data/: __init__.py  source.py  trading_calendar.py  universe.py
draco_model/layers/: __init__.py  aggregate.py  combine.py  expressions.py  filters.py  level2.py  metrics.py  names.py  operators.py  snapshot.py  source.py  transforms.py
draco_model/layers/inputs/: __init__.py  field.py  input.py
draco_model/market/: __init__.py  minute_calendar.py  schema.py
draco_model/runtime/: __init__.py  engine.py  execution.py  profiling.py
examples/: close_last.py  preclose_fill_state_demo.py  top_volume_close_mean.py
sample/: level2_bars.py  snapshot_minbar.py  trades_wtminbar.py
tests/: conftest.py  test_concat.py  test_engine.py  test_examples.py  test_expressions.py  test_field.py  test_filters.py  test_graph.py  test_level2.py  test_minute_calendar.py  test_operator_dag.py  test_plan_verification.py  test_price_input.py  test_price_transforms.py  test_profiling.py  test_schema.py  test_snapshot.py  test_source_validate.py  test_trace.py
