[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "draco-model"
version = "0.1.0"
description = "Function/model-as-factor computation graph backed by Polars."
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["draco_model*"]
